--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<app-test></app-test>
+
+<div class="container" mt-4>
+  <router-outlet></router-outlet>
+</div>
+
+
